crates/snapshot-tests/tests/snapshots/de__custom_error.snap
---
source: snapshot-tests/tests/de.rs
expression: error
---
error[OutOfRange]: out of range of 'u8' at `year`
  ┌─ custom_error:1:8
  │
1 │ year = 40_000
  │        ^^^^^^
